# RaceCar

./: CMakeLists.txt  README  build_and_run.ps1  track_segments.txt
src/: main.cpp
src/AI/: AIController.cpp  AIController.h  InnovationTracker.cpp  InnovationTracker.h  NEATTest.cpp  NetworkRender.cpp  NetworkRender.h  NetworkRenderHandler.cpp  NetworkRenderHandler.h  NeuralNetwork.cpp  NeuralNetwork.h  Population.cpp  Population.h  Species.cpp  Species.h
src/Background/: Background.cpp  Background.h
src/BezierCurve/: BezierCurve.cpp  BezierCurve.h
src/BezierShape/: BezierShape.cpp  BezierShape.h
src/Car/: CarShape.cpp  CarShape.h  RaySensor.cpp  RaySensor.h  RaySensorHandler.cpp  RaySensorHandler.h  car.cpp  car.h
src/Checkpoint/: Checkpoint.cpp  Checkpoint.h  CheckpointHandler.cpp  CheckpointHandler.h  CheckpointUIRenderer.cpp  CheckpointUIRenderer.h
src/Game/: Game.cpp  Game.h
src/Interfaces/: ICollidable.h  IRenderable.h  ITimer.h
src/Timer/: Timer.cpp  Timer.h  TimerLogic.cpp  TimerLogic.h  TimerRenderer.cpp  TimerRenderer.h
src/Track/: track.cpp  track.h
src/UI/: Button.cpp  Button.h  UIManager.cpp  UIManager.h
